seichi-onp-k8s/manifests/seichi-kubernetes/kustomize-bases/minecraft-gateway-bungeecord/service-bungeecord-loadbalancer.yaml
# TCPShield から BungeeCord へと接続を受け取るためのサービス設定
apiVersion: v1
kind: Service
metadata:
  name: bungeecord
spec:
  type: LoadBalancer
  ports:
    - name: bungee
      port: 25565
      protocol: TCP
      targetPort: bungeecord
  selector:
    app: bungeecord
