seichi-onp-k8s/manifests/seichi-kubernetes/kustomize-bases/minecraft-gateway-bungeecord/service-bungeecord-metrics.yaml
apiVersion: v1
kind: Service
metadata:
  name: bungeecord-metrics
  labels:
    app: bungeecord
    role: metrics
spec:
  type: ClusterIP
  ports:
    - name: jmx-metrics
      port: 18321
      protocol: TCP
      targetPort: jmx-metrics
    - name: metrics
      port: 9225
      protocol: TCP
      targetPort: metrics
  selector:
    app: bungeecord
